--- a/config/model/bow.yaml
+++ b/config/model/bow.yaml
@@ -3,5 +3,5 @@ _target_: src.models.BoW
 n_embd: 64
 n_embd2: 64
 block_size: ${training.block_size}
-pe_type: 'randn'
+pe_type: 'rope'
 vocab_size: ???
