--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fire>=0.7.1",
+    "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
+    "pandas>=2.3.2",
     "swanlab>=0.6.8",
     "tensorboard>=2.20.0",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
+    "wandb>=0.21.3",
 ]
 
 [[tool.uv.index]]
