--- a/config/model/gpt.yaml
+++ b/config/model/gpt.yaml
@@ -1,8 +1,8 @@
 # filepath: config/model/gpt.yaml
-_target_: src.models.GPTLanguageModel
+_target_: src.models.GPT
 block_size: ${training.block_size}
 n_embd: 64
-n_head: 6
+n_head: 8
 n_layer: 6
 dropout: 0.2
 vocab_size: ???
