--- a/config/model/gpt_v3.yaml
+++ b/config/model/gpt_v3.yaml
@@ -1,8 +1,8 @@
 # filepath: config/model/gpt_v3.yaml
-_target_: src.models.GPTLanguageModel_v3
+_target_: src.models.GPT_v3
 block_size: ${training.block_size}
 n_embd: 64
-n_head: 6
+n_head: 8
 n_layer: 6
 dropout: 0.2
 pe_type: 'sinpe'
