--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "debugpy>=1.8.16",
+    "einops>=0.8.1",
     "fire>=0.7.1",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
