--- a/config/logger/swanlab.yaml
+++ b/config/logger/swanlab.yaml
@@ -1,3 +1,3 @@
 type: swanlab
-project_name: learnGPT
-run_name: ${get_model_suffix:${model._target_}}-${model.n_embd}-${model.n_head}-${model.n_layer}
+project_name: learnGPT-attn
+run_name: ${get_model_suffix:${model._target_}}-${model.attention_type}-${model.n_embd}-${model.n_head}-${model.n_layer}-${model.block_size}
