--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fire>=0.7.1",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
+    "nvitop>=1.5.3",
     "pandas>=2.3.2",
     "swanlab>=0.6.10",
     "tensorboard>=2.20.0",
