--- a/config/logger/wandb.yaml
+++ b/config/logger/wandb.yaml
@@ -1,3 +1,3 @@
 type: wandb
 project_name: learnGPT
-run_name: ${get_model_suffix:${model._target_}}-${model.attention_type}-${model.n_embd}-${model.n_head}-${model.n_layer}-${model.block_size}
+run_name: ${get_model_suffix:${model._target_}}-c${training.block_size}
